# umbrail

./: .gitignore  CMakeLists.txt  README.md  TODO  genversion.sh  vcsversion.sh
desktop/: CMakeLists.txt  app.desktop  icon-source.xcf  mainui.rc  navtracks.desktop  navtracksui.rc  viewerui.rc
doc/: coordsys.md  screenshots.md
pics/: CMakeLists.txt  star-icon-source.txt
qcustomplot/: CMakeLists.txt  qcustomplot.cpp  qcustomplot.h
src/: CMakeLists.txt  autotooltipdelegate.cpp  autotooltipdelegate.h  commands.cpp  commands.h  createpointdialogue.cpp  createpointdialogue.h  createroutepointdialogue.cpp  createroutepointdialogue.h  createwaypointdialogue.cpp  createwaypointdialogue.h  dataindexer.cpp  dataindexer.h  elevationdownloader.cpp  elevationdownloader.h  elevationmanager.cpp  elevationmanager.h  elevationtile.cpp  elevationtile.h  errorreporter.cpp  errorreporter.h  exporterbase.cpp  exporterbase.h  filescontroller.cpp  filescontroller.h  filesmodel.cpp  filesmodel.h  filesview.cpp  filesview.h  folderselectdialogue.cpp  folderselectdialogue.h  folderselectwidget.cpp  folderselectwidget.h  gpxexporter.cpp  gpxexporter.h  gpximporter.cpp  gpximporter.h  importerbase.cpp  importerbase.h  importerexporterbase.cpp  (+106 more)
src/app/: CMakeLists.txt  commands.cpp  commands.h  createpointdialogue.cpp  createpointdialogue.h  filescontroller.cpp  filescontroller.h  filesmodel.cpp  filesview.cpp  folderselectdialogue.cpp  folderselectdialogue.h  folderselectwidget.cpp  folderselectwidget.h  itemselectdialogue.cpp  itemselectdialogue.h  layerbase.cpp  layerbase.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindowinterface.cpp  mapcontroller.cpp  mapcontroller.h  mapview.cpp  mapview.h  profilewidget.cpp  profilewidget.h  project.cpp  routeslayer.cpp  routeslayer.h  settingsdialogue.cpp  settingsdialogue.h  statisticswidget.cpp  statisticswidget.h  stopdetectdialogue.cpp  stopdetectdialogue.h  stopslayer.h  trackfiltermodel.cpp  trackpropertiesdetailpages.cpp  trackpropertiesdetailpages.h  (+13 more)
src/core/: CMakeLists.txt  applicationdata.cpp  applicationdata.h  applicationdatainterface.cpp  applicationdatainterface.h  dataindexer.cpp  dataindexer.h  filesmodel.cpp  filesmodel.h  metadatamodel.cpp  metadatamodel.h  pluginmanager.cpp  pluginmanager.h  project.h  trackdata.cpp  trackdata.h  trackfiltermodel.cpp  trackfiltermodel.h  units.cpp  units.h  waypointimageprovider.cpp  waypointimageprovider.h
src/gui/: CMakeLists.txt  autotooltipdelegate.cpp  autotooltipdelegate.h  createpointdialogue.cpp  createpointdialogue.h  filesview.cpp  filesview.h  itemselectdialogue.cpp  itemselectdialogue.h  itemtypecombo.cpp  itemtypecombo.h  latlongdialogue.cpp  latlongdialogue.h  latlongwidget.cpp  latlongwidget.h  mapthemedialogue.h  moveitemdialogue.cpp  moveitemdialogue.h  ploteditwidget.cpp  ploteditwidget.h  timezonedialogue.cpp  timezonedialogue.h  timezoneselector.cpp  timezoneselector.h  timezonewidget.cpp  timezonewidget.h  trackdatalabel.cpp  trackdatalabel.h  valueslider.cpp  valueslider.h  variableunitcombo.cpp  variableunitcombo.h  variableunitdisplay.cpp  variableunitdisplay.h  waypointselectdialogue.cpp  waypointselectdialogue.h
src/io/: CMakeLists.txt  errorreporter.cpp  errorreporter.h  exporterbase.cpp  exporterbase.h  gpxexporter.cpp  gpxexporter.h  gpximporter.cpp  gpximporter.h  importerbase.cpp  importerbase.h  importerexporterbase.cpp  importerexporterbase.h
src/map/: CMakeLists.txt  layerbase.cpp  layerbase.h  mapcontroller.cpp  mapcontroller.h  mapthemedialogue.cpp  mapthemedialogue.h  mapview.cpp  mapview.h  positioninfodialogue.cpp  positioninfodialogue.h  routeslayer.cpp  routeslayer.h  stopslayer.cpp  stopslayer.h  trackslayer.cpp  trackslayer.h  waypointslayer.cpp  waypointslayer.h
src/media/: CMakeLists.txt  mediaplayer.cpp  mediaplayer.h  photoviewer.cpp  photoviewer.h  videoviewer.cpp  videoviewer.h
src/plugins/: CMakeLists.txt  abstractcoordinatehandler.cpp  abstractcoordinatehandler.h  coordinatehandlerinterface.h  decimalcoordinate.cpp  decimalcoordinate.h  dmscoordinate.cpp  dmscoordinate.h  osgbcoordinate.cpp  osgbcoordinate.h  swisscoordinate.cpp  swisscoordinate.h
src/qcustomplot/: CMakeLists.txt
src/services/: CMakeLists.txt  elevationmanager.cpp  elevationmanager.h  elevationtile.cpp  elevationtile.h  mapbrowser.cpp  mapbrowser.h  timezoneprovider.cpp  timezoneprovider.h
